crud paciente finalizado blazor

--- a/frontend/ClinicFrontend/Layout/NavMenu.razor
+++ b/frontend/ClinicFrontend/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ClinicFrontend</a>
+        <a class="navbar-brand" href="">Clinic MVP</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,13 +15,23 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="pacientes">
+                <span class="bi bi-people-fill" aria-hidden="true"></span> Pacientes
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="medicos">
+                <span class="bi bi-person-badge-fill" aria-hidden="true"></span> Médicos
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="consultas">
+                <span class="bi bi-calendar2-check-fill" aria-hidden="true"></span> Consultas
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="auditoria">
+                <span class="bi bi-journal-text" aria-hidden="true"></span> Auditoria
             </NavLink>
         </div>
     </nav>
